younger bro portfolio

--- a/index.html
+++ b/index.html
@@ -8,9 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="golden-highlight">Mahdi's</span> World</h1>
-    <h3>Smartest boy in the world</h3>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="golden-highlight">Mahdi's</span> World</h1>
+            <h3>Smartest boy in the world</h3>
+            <p>Hei, I am Mahdi. I am a good boy. Love to smile and make others smily. People called me a dashing boy. Some people say that, I am a great motivator also. They love my company. I hope you will also feel same. So, If you want to talk, feel free to connect with me. </p>
+            <a class="button-style" target="_blank" href="https://www.facebook.com/kitkatboy.mahdi">Connect with Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/profile-mahdi.png" alt="Mahdi">
+        </div>
+    </section>
+    <section class="dream-part">
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a best businessman</h3>
+            <p>No man lives in this earth without dream. Dream is my life. I want to be a businessman. So that, I can earn more and donate for the poor people. I want to see smile in their face because of me. I have a plan for my success. I will do it steps by steps. If you want to take a autograph from a future successful businessman, You can messege here.</p>
+            <a class="button-style" target="_blank" href="https://www.facebook.com/kitkatboy.mahdi">Press to Connect</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h2>Experience</h2>
+        <div id="full-stack" class="half-width blog">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="golden-highlight">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-stack" class="half-width blog">
+            <h2>Baby Web Developer</h2>
+            <h3 class="golden-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer> <p> Developed by- contact.moshfiq@gmail.com <br>
+© Moshfiq Elahi 2020, all rights reserved. </p>
+    </footer>
 </body>
 </html>
